[package]
name = "black_scholes_pricer"
version = "0.2.0"
authors = ["ronnie chowdhury <ronnie.c995@gmail.com>"]
edition = "2018"
description = "Scalar and SIMD vectorised versions of black scholes and binomial option pricing"
license = "MIT"
repository = "https://github.com/ronniec95/black_scholes"
documentation = "https://docs.rs/black_scholes_simd"
readme = "README.md"
keywords = ["option","pricing","simd","black","scholes"]

[lib]
name = "black_scholes_pricer"

[dependencies]
wide= "0.5"
bytemuck = "^1"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = 0