[package]
authors = ["ronnie chowdhury <ronnie.c995@gmail.com>"]
description = "Scalar and SIMD vectorised versions of black scholes and binomial option pricing"
documentation = "https://docs.rs/black_scholes_simd"
edition = "2018"
keywords = ["option", "pricing", "simd", "black", "scholes"]
license = "MIT"
name = "black_scholes_pricer"
readme = "README.md"
repository = "https://github.com/ronniec95/black_scholes"
version = "0.2.2"

[lib]
name = "black_scholes_pricer"

[dependencies]
bytemuck = "^1"
wide = "0.7"

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
debug = 0
opt-level = 3
